# embedded-smart-greenhouse-cluster

./: .gitignore  CMakeLists.txt  README.md  start_server.cmd
.github/workflows/: cmake.yml
data/: sample_history.csv
docs/: API接口.md  演示说明.md  系统架构.md  项目设计报告.md
firmware/esp32_greenhouse_node/: esp32_greenhouse_node.ino
hardware/: bom.csv  pinout.csv
include/: ActuatorState.hpp  ClusterController.hpp  GreenhouseNode.hpp  SensorData.hpp
scripts/: generate_demo_data.py
server/: app.py
src/: ClusterController.cpp  GreenhouseNode.cpp  main.cpp
web/: app.js  index.html  styles.css
